# smart-contract-rust-exmaple

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.sh  package.json
src/: constants.rs  lib.rs  persist.rs  types.rs  utils.rs
tests/: index.html
wbi/: Cargo.toml
wbi/src/: address.rs  context.rs  db.rs  lib.rs  u256.rs
