[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["zhuyingjie <m6567fc@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wbi =  { path = "./wbi" }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"
hex = { version = "0.4.3", default-features = false }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
[dev-dependencies]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

[workspace]
members = [
    '.',
    'wbi'
]
