[package]
name = "wbi"
version = "0.1.0"
authors = ["zhuyingjie <m6567fc@outlook.com>"]
edition = "2018"



[features]

[dependencies]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"

